# TEgenomeSimulator-open

./: .gitignore  00_build_conda_env.sh  01_extract_curated_TE_lib.sh  02_stitch_LTR_INT.py  02_stitch_LTR_INT_AT.sh  02_stitch_LTR_INT_OS.sh  03_combine_curated_TE_lib.sh  04_group_curated_TE_lib.sh  05_prep_sim_TE_lib.py  05_prep_sim_TE_lib.sh  05_prep_sim_TE_lib_5_10.py  05_prep_sim_TE_lib_5_100.py  05_prep_sim_TE_lib_5_1000.py  05_prep_sim_TE_lib_5_500.py  06_prep_nonTE_genome.txt  07_summarise_RMasker_out.sh  08.01_post_processes.sh  08_run_TEgenomeSimulator.sh  09_summarise_sim_genome.Rmd  09_summarise_sim_genome.sh  09_summarise_sim_genome_DH_5_10.Rmd  09_summarise_sim_genome_DH_5_10.md  09_summarise_sim_genome_DH_5_100.Rmd  09_summarise_sim_genome_DH_5_1000.Rmd  09_summarise_sim_genome_DH_5_500.Rmd  10_kmer_analysis.sh  LICENSE  README.md  TEgenomeSimulator.py  TEhub.01_extract_genome_and_TE_lib.sh  TEhub.02_mask_TE.sh  TEhub.03_summarise_RM_out_dm6.sh  TEhub.03_summarise_RM_out_tair10.sh  TEhub.04_prep_sim_TE_lib.sh  TEhub.04_prep_sim_TE_lib_tair10.Rmd  TEhub.04_prep_sim_TE_lib_tair10.ipynb  TEhub.04_prep_sim_TE_lib_tair10.py  TEhub.05.01_post_processes.sh  TEhub.05_run_TEgenomeSimulator.sh  TEhub.09_summarise_ori_genome_tair10.Rmd  (+44 more)
.github/: contributing_guide.md
.github/workflows/: build.yaml  publish.yaml
TEgenomeSimulator/: TEgenomeSimulator.py
conda-recipe/: meta.yaml
scripts/: TE_sim_nested_insertion.py  prep_sim_TE_lib.py  prep_yml_config.py
tegenomesimulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+60 files in other folders)
